--- a/src/index.html
+++ b/src/index.html
@@ -49,44 +49,44 @@
 
         <input type="radio" name="upload-filter" class="upload-filter" id="upload-filter-none" value="none" checked>
         <label class="upload-filter-label" for="upload-filter-none">
-          <div class="upload-filter-preview"></div>
+          <div class="upload-filter-preview" tabindex="0"></div>
           Оригинал
         </label>
 
         <input type="radio" name="upload-filter" class="upload-filter" id="upload-filter-chrome" value="chrome">
         <label class="upload-filter-label upload-filter-label-chrome" for="upload-filter-chrome">
-          <div class="upload-filter-preview"></div>
+          <div class="upload-filter-preview" tabindex="1"></div>
           Хром
         </label>
 
         <input type="radio" name="upload-filter" class="upload-filter" id="upload-filter-sepia" value="sepia">
         <label class="upload-filter-label upload-filter-label-sepia" for="upload-filter-sepia">
-          <div class="upload-filter-preview"></div>
+          <div class="upload-filter-preview" tabindex="2"></div>
           Сепия
         </label>
 
         <input type="radio" name="upload-filter" class="upload-filter" id="upload-filter-marvin" value="marvin">
         <label class="upload-filter-label upload-filter-label-marvin" for="upload-filter-marvin">
-          <div class="upload-filter-preview"></div>
+          <div class="upload-filter-preview" tabindex="3"></div>
           Марвин
         </label>
 
         <input type="radio" name="upload-filter" class="upload-filter" id="upload-filter-phobos" value="phobos">
         <label class="upload-filter-label upload-filter-label-phobos" for="upload-filter-phobos">
-          <div class="upload-filter-preview"></div>
+          <div class="upload-filter-preview" tabindex="4"></div>
           Фобос
         </label>
 
         <input type="radio" name="upload-filter" class="upload-filter" id="upload-filter-heat" value="heat">
         <label class="upload-filter-label upload-filter-label-heat" for="upload-filter-heat">
-          <div class="upload-filter-preview"></div>
+          <div class="upload-filter-preview" tabindex="5"></div>
           Зной
         </label>
       </fieldset>
 
       <textarea class="upload-form-description" name="upload-description" placeholder="Ваш комментарий..."></textarea>
 
-      <button class="upload-form-cancel" type="reset" id="upload-cancel"></button>
+      <button class="upload-form-cancel" type="reset" id="upload-cancel" tabindex="6"></button>
       <button class="upload-form-submit" type="submit" id="upload-submit">Отправить</button>
     </form>
   </div>
