--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,8 @@
     </span>
   </a>
 </template>
-<script src="js/main.js" type="text/javascript"></script>
+<script src="js/initialize-filters.js" type="text/javascript"></script>
+<script src="js/initialize-scale.js" type="text/javascript"></script>
+<script src="js/form.js" type="text/javascript"></script>
 </body>
 </html>
